<resources>
    <string name="app_name">PassKeeper</string>

    //Splash Screen
    <string name="logo_description">Logo of the app</string>

    //Login Screen
    <string name="welcome_message">Welcome!</string>
    <string name="welcome_message2">Please login in order to proceed further</string>
    <string name="email">Email</string>
    <string name="password">Password </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="send">Send</string>
    <string name="reset">Do you want to reset password?</string>

    //Register page
    <string name="register_title">Fill the fields in order to register</string>
    <string name="register_password_repeat">Repeat Password</string>
    <string name="create_account">Create account</string>

    //Password add page
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="copy">Copy</string>
    <string name="link">Website Link</string>
    <string name="note">Notes</string>
    <string name="save">Save</string>

    //Password page
    <string name="emptyDb">No Passwords added yet</string>

    <string name="search">Search</string>
    <string name="emptySearch">Nothing searched yet</string>
</resources>