<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/welcome_message"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/welcome_message2"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome2"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLayer"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayer"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:background="@color/background_blue"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@color/background_blue"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/forgot_pass"
        android:textColor="@color/text_color"
        android:textSize="14sp" />

</RelativeLayout>